--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,16 @@
 # Site settings
-title: A blog about lorem ipsum dolor sit amet
-description: A blog about lorem ipsum dolor sit amet
+title: Anastasiia's Portfolio
+description: A blog about my projects
 # baseurl: "/particle" # the subpath of your site, e.g. /blog
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
 username: Anastasiia Tychkova
-user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.
-user_title: Software Developer
-email: anon@anon.com
-twitter_username: lorem_ipsum
-github_username:  lorem_ipsum
-gplus_username:  lorem_ipsum
+user_description: Front-end Specialization Course fresh grad with experience building responsive websites and specializing in HTML5, SCSS, and Vanilla JavaScript with project experience working with Vue.js and Nuxt.js. Using REACT for pet projects.
+user_title: Front-End Developer
+email: tychkovaam@gmail.com
+github_username:  tychtych
+gplus_username:  tychkovaam
 
 # Google-analytics
 google-analytics:
