--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: A blog about my projects
 
 # User settings
 username: Anastasiia Tychkova
-user_description: Front-end Specialization Course fresh grad with experience building responsive websites and specializing in HTML5, SCSS, and Vanilla JavaScript with project experience working with Vue.js and Nuxt.js. Using REACT for pet projects.
+user_description: Front-end Specialization Course fresh grad with experience building responsive websites and specializing in HTML5, SCSS, and Vanilla JavaScript with project experience working with Vue.js and Nuxt.js. Using React for pet projects.
 user_title: Front-End Developer
 email: tychkovaam@gmail.com
 github_username:  tychtych
