--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: A blog about my projects
 
 # User settings
 username: Anastasiia Tychkova
-user_description: Front-end Specialization Course fresh grad with experience building responsive websites and specializing in HTML5, SCSS, and Vanilla JavaScript with project experience working with Vue.js and Nuxt.js. I am a Junior Front-End Developer with 1 year experience of building eye-catching responsive websites.
+user_description: Front-end Developer with experience building responsive websites and specializing in HTML5, SCSS, Vanilla JavaScript and frameworks Vue.js and React. I am a Junior Front-End Developer with 1 year experience of building eye-catching responsive websites.
   I really enjoy working both independently and within a team to deliver a quality product. Moreover, I keen on minimalistic and
   elegant design solutions for users - it satisfies me to see that there is a room for all elements on the website, and they're not crowded.
   I am currently actively using React in my pet projects.
