--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,9 @@ description: A blog about my projects
 
 # User settings
 username: Anastasiia Tychkova
-user_description: Front-end Developer with experience building responsive websites and specializing in HTML5, SCSS, Vanilla JavaScript and frameworks Vue.js and React. I am a Junior Front-End Developer with 1 year experience of building eye-catching responsive websites.
+user_description: Front-end Developer with experience building responsive websites and specializing in HTML5, SCSS, Vanilla JavaScript and frameworks Vue.js and React. I have solid knowledge in AWS as I was migrating recently the current project from Inmotion to AWS! Now I am preparing to pass the Cloud Practitioner exam (yes, I had a great practice first before the exam itself ha-ha!)
   I really enjoy working both independently and within a team to deliver a quality product. Moreover, I keen on minimalistic and
-  elegant design solutions for users - it satisfies me to see that there is a room for all elements on the website, and they're not crowded.
-  I am currently actively using React in my pet projects.
+  elegant design solutions for users - I study a lot of material on UI/UX and constantly work on my skills.
 user_title: Front-End Developer
 email: tychkovaam@gmail.com
 github_username:  tychtych
