added info about sanomind

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: A blog about my projects
 
 # User settings
 username: Anastasiia Tychkova
-user_description: Front-end Developer with experience building responsive websites and specializing in HTML5, SCSS, Vanilla JavaScript and frameworks Vue.js and React. I have solid knowledge in AWS as I was migrating recently the current project from Inmotion to AWS! Now I am preparing to pass the Cloud Practitioner exam (yes, I had a great practice first before the exam itself ha-ha!)
+user_description: Front-end Developer with experience building responsive websites and specializing in HTML5, SCSS, Vanilla JavaScript and frameworks Vue.js and React. I have hands-on experience with AWS services as I was migrating recently the current project from Inmotion to AWS! Now I am preparing to pass the Cloud Practitioner exam (yes, I had a great practice first before the exam itself ha-ha!)
   I really enjoy working both independently and within a team to deliver a quality product. Moreover, I keen on minimalistic and
   elegant design solutions for users - I study a lot of material on UI/UX and constantly work on my skills.
 user_title: Front-End Developer
